--- a/app/src/main/res/layout/fragment_region_home.xml
+++ b/app/src/main/res/layout/fragment_region_home.xml
@@ -18,7 +18,7 @@
         tools:context=".PokemonFragment">
 
         <TextView
-            android:id="@+id/text_region_name"
+            android:id="@+id/text_pokemon_name"
             style="@style/TextViewTitleBold"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -34,13 +34,13 @@
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginEnd="@dimen/_5sdp"
             android:background="@color/secondary_text"
-            app:layout_constraintBottom_toBottomOf="@+id/text_first_medal"
-            app:layout_constraintEnd_toStartOf="@+id/text_first_medal"
+            app:layout_constraintBottom_toBottomOf="@+id/text_subtitle_category"
+            app:layout_constraintEnd_toStartOf="@+id/text_subtitle_category"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_region_name" />
+            app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name" />
 
         <TextView
-            android:id="@+id/text_first_medal"
+            android:id="@+id/text_subtitle_category"
             style="@style/TextViewTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -49,7 +49,7 @@
             android:text="@string/textview_subtitle_region"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_region_name"
+            app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name"
             tools:text="@string/textview_subtitle_region"/>
 
 
@@ -59,10 +59,10 @@
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginEnd="@dimen/_5sdp"
             android:background="@color/secondary_text"
-            app:layout_constraintBottom_toBottomOf="@+id/text_first_medal"
+            app:layout_constraintBottom_toBottomOf="@+id/text_subtitle_category"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/text_first_medal"
-            app:layout_constraintTop_toBottomOf="@+id/text_region_name" />
+            app:layout_constraintStart_toEndOf="@+id/text_subtitle_category"
+            app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name" />
 
 
         <com.google.android.material.textfield.TextInputLayout
@@ -83,7 +83,7 @@
             app:hintEnabled="true"
             app:layout_constraintEnd_toStartOf="@+id/btn_search"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_first_medal"
+            app:layout_constraintTop_toBottomOf="@+id/text_subtitle_category"
             app:startIconDrawable="@drawable/ic_search">
 
 
@@ -108,7 +108,7 @@
             android:src="@drawable/ic_arrow_right"
             app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_first_medal"
+            app:layout_constraintTop_toBottomOf="@+id/text_subtitle_category"
             app:tint="@color/secondary_text" />
 
         <androidx.recyclerview.widget.RecyclerView
