Add method download images

--- a/app/src/main/res/layout/fragment_detail_pokemon.xml
+++ b/app/src/main/res/layout/fragment_detail_pokemon.xml
@@ -645,7 +645,7 @@
                     android:layout_width="@dimen/_80sdp"
                     android:layout_height="@dimen/_80sdp"
                     android:contentDescription="@string/app_name"
-                    android:imageUrl="@{pokemon.urlImage(pokemon.first_num_pokemon)}"
+                    android:imageUrl="@{pokemon.getUrlImage(pokemon.first_num_pokemon)}"
                     android:scaleType="fitCenter"
                     app:layout_constraintEnd_toStartOf="@+id/guideline_33_v"
                     app:layout_constraintStart_toStartOf="parent"
@@ -686,7 +686,7 @@
                     android:layout_width="@dimen/_80sdp"
                     android:layout_height="@dimen/_80sdp"
                     android:contentDescription="@string/app_name"
-                    android:imageUrl="@{pokemon.urlImage(pokemon.second_num_pokemon)}"
+                    android:imageUrl="@{pokemon.getUrlImage(pokemon.second_num_pokemon)}"
                     android:scaleType="fitCenter"
                     app:layout_constraintEnd_toStartOf="@+id/guideline_66_v"
                     app:layout_constraintStart_toStartOf="@+id/guideline_33_v"
@@ -741,7 +741,7 @@
                     android:layout_width="@dimen/_80sdp"
                     android:layout_height="@dimen/_80sdp"
                     android:contentDescription="@string/app_name"
-                    android:imageUrl="@{pokemon.urlImage(pokemon.third_num_pokemon)}"
+                    android:imageUrl="@{pokemon.getUrlImage(pokemon.third_num_pokemon)}"
                     android:scaleType="fitCenter"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/guideline_66_v"
