--- a/app/src/main/res/layout/fragment_detail_pokemon.xml
+++ b/app/src/main/res/layout/fragment_detail_pokemon.xml
@@ -60,6 +60,7 @@
 
 
         <View
+            android:id="@+id/gradient_view"
             android:layout_width="0dp"
             android:layout_height="2dp"
             android:layout_marginStart="@dimen/_5sdp"
@@ -70,8 +71,19 @@
             app:layout_constraintStart_toEndOf="@+id/text_subtitle_category"
             app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name" />
 
+        <View
+            android:id="@+id/view5"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/_20sdp"
+            android:background="@drawable/background_primary_gradient_top"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:elevation="3dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_subtitle_category" />
+
 
         <ScrollView
+            android:id="@+id/scrollView2"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -102,11 +114,45 @@
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/viewpager_images"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_150sdp"
+                    android:layout_height="@dimen/_200sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
+                    android:clipToPadding="true"
+                    android:layout_margin="0dp"
+                    app:listImages="@{pokemon.images}"
                     tools:visibility="visible" />
+
+
+                <View
+                    android:id="@+id/view_gradient_top"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/_40sdp"
+                    android:background="@drawable/background_primary_gradient_bottom"
+                    app:layout_constraintBottom_toBottomOf="@+id/viewpager_images"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+
+
+
+                <TextView
+                    style="@style/TextViewDescriptionBold"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="-50dp"
+                    android:layout_marginBottom="-50dp"
+                    android:alpha="0.3"
+                    android:elevation="4dp"
+                    android:gravity="center"
+                    android:letterSpacing="0.2"
+                    android:lines="1"
+                    android:text="@{pokemon.name}"
+                    android:textSize="@dimen/_50sdp"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="@+id/view_gradient_top"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    tools:text="Bulbasaur" />
 
                 <TextView
                     android:id="@+id/text_pokemon_name_description"
@@ -126,31 +172,68 @@
 
                 <ImageView
                     android:id="@+id/imageType1"
-                    android:layout_width="@dimen/_20sdp"
-                    android:layout_height="@dimen/_20sdp"
+                    android:layout_width="@dimen/_25sdp"
+                    android:layout_height="@dimen/_25sdp"
                     android:layout_margin="@dimen/_20sdp"
                     android:contentDescription="@string/app_name"
                     android:scaleType="centerCrop"
                     android:textSize="14sp"
-                    app:src="@{pokemon.getImgFirstType}"
                     app:layout_constraintBottom_toBottomOf="@+id/text_pokemon_name_description"
                     app:layout_constraintStart_toEndOf="@+id/text_pokemon_name_description"
                     app:layout_constraintTop_toTopOf="@+id/text_pokemon_name_description"
+                    app:src="@{pokemon.getType(pokemon.type_first)}"
                     tools:src="@drawable/ic_grass" />
 
                 <ImageView
-                    android:layout_width="@dimen/_20sdp"
-                    android:layout_height="@dimen/_20sdp"
+                    android:layout_width="@dimen/_25sdp"
+                    android:layout_height="@dimen/_25sdp"
                     android:layout_margin="@dimen/_20sdp"
                     android:contentDescription="@string/app_name"
                     android:scaleType="centerCrop"
                     android:textSize="14sp"
-                    app:src="@{pokemon.getImgSecondType}"
                     android:visibility="@{pokemon.type_second !=null  ? View.VISIBLE : View.GONE, default= gone }"
                     app:layout_constraintBottom_toBottomOf="@+id/text_pokemon_name_description"
                     app:layout_constraintStart_toEndOf="@+id/imageType1"
                     app:layout_constraintTop_toTopOf="@+id/text_pokemon_name_description"
+                    app:src="@{pokemon.getType(pokemon.type_second)}"
                     tools:src="@drawable/ic_poison" />
+
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="2dp"
+                    android:layout_marginStart="@dimen/_5sdp"
+                    android:layout_marginEnd="@dimen/_5sdp"
+                    android:background="@color/secondary_text"
+                    app:layout_constraintBottom_toBottomOf="@+id/text_subtitle_pokedex"
+                    app:layout_constraintEnd_toStartOf="@+id/text_subtitle_pokedex"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name_description" />
+
+                <TextView
+                    android:id="@+id/text_subtitle_pokedex"
+                    style="@style/TextViewTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="@dimen/_14sdp"
+                    android:text='@{@string/textview_subtitle_detail_pokedex(pokemon.name)}'
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name_description"
+                    tools:text="¿Qué dice la pokedex sobre\nBulbasaur?" />
+
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="2dp"
+                    android:layout_marginStart="@dimen/_5sdp"
+                    android:layout_marginEnd="@dimen/_5sdp"
+                    android:background="@color/secondary_text"
+                    app:layout_constraintBottom_toBottomOf="@+id/text_subtitle_pokedex"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/text_subtitle_pokedex"
+                    app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name_description" />
 
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/viewpager_text_pokedex"
@@ -158,7 +241,10 @@
                     android:layout_height="@dimen/_150sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name_description"
+                    android:clipToPadding="false"
+                    android:layout_margin="0dp"
+                    app:layout_constraintTop_toBottomOf="@+id/text_subtitle_pokedex"
+                    app:listText="@{pokemon.getOrderDescriptionList}"
                     tools:visibility="visible" />
 
                 <TextView
@@ -245,6 +331,50 @@
                     tools:text="Categoria" />
 
 
+                <TextView
+                    android:id="@+id/text_hability"
+                    style="@style/TextViewDescription"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:lines="1"
+                    android:padding="0dp"
+                    android:text="@string/pokemon_title_ability"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/text_title_hability"
+                    tools:text="Habilidad" />
+
+
+                <TextView
+                    android:id="@+id/text_title_hability"
+                    style="@style/TextViewDescriptionBold"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:lines="1"
+                    android:text="@{pokemon.ability}"
+                    android:textColor="@color/primary_text"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/text_title_weight"
+                    tools:text="Espesura" />
+
+
+                <TextView
+                    android:id="@+id/text_description_hability"
+                    style="@style/TextViewDescription"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="@dimen/_5sdp"
+                    android:text="@{pokemon.ability_description}"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/text_hability"
+                    tools:text="Espesura aumenta la potencia de los movimientos de tipo planta del poseedor en un 50% cuando su salud esté igual o por debajo de 1/3 de sus PS máximos." />
+
+
                 <View
                     android:id="@+id/view2"
                     android:layout_width="0dp"
@@ -256,7 +386,7 @@
                     app:layout_constraintBottom_toBottomOf="@+id/text_stats"
                     app:layout_constraintEnd_toStartOf="@+id/text_stats"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/text_title_weight" />
+                    app:layout_constraintTop_toBottomOf="@+id/text_description_hability" />
 
                 <TextView
                     android:id="@+id/text_stats"
@@ -269,11 +399,12 @@
                     android:text='@string/pokemon_subtitle_stats'
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/text_title_weight"
+                    app:layout_constraintTop_toBottomOf="@+id/text_description_hability"
                     tools:text="Estadisticas" />
 
 
                 <View
+                    android:id="@+id/view4"
                     android:layout_width="0dp"
                     android:layout_height="2dp"
                     android:layout_marginStart="@dimen/_5sdp"
@@ -283,7 +414,7 @@
                     app:layout_constraintBottom_toBottomOf="@+id/text_stats"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/text_stats"
-                    app:layout_constraintTop_toBottomOf="@+id/text_title_weight" />
+                    app:layout_constraintTop_toBottomOf="@+id/text_description_hability" />
 
 
                 <TextView
@@ -524,7 +655,7 @@
                     android:gravity="center"
                     android:lines="1"
                     android:padding="0dp"
-                    android:text="@{@string/textview_custom_param(pokemon.velocity)}"
+                    android:text="@{@string/textview_custom_param(pokemon.speed)}"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/textView11"
                     app:layout_constraintStart_toStartOf="@+id/guideline_33_v"
@@ -537,7 +668,7 @@
                     android:layout_height="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:max="100"
-                    android:progress="@{pokemon.velocity}"
+                    android:progress="@{pokemon.speed}"
                     android:progressBackgroundTint="@color/secondary_text"
                     android:progressTint="@color/primary_text"
                     app:layout_constraintBottom_toBottomOf="@+id/textView11"
@@ -645,7 +776,7 @@
                     android:layout_width="@dimen/_80sdp"
                     android:layout_height="@dimen/_80sdp"
                     android:contentDescription="@string/app_name"
-                    android:imageUrl="@{pokemon.getUrlImage(pokemon.first_num_pokemon)}"
+                    android:imageUrl="@{pokemon.getThumbnail(pokemon.first_num_pokemon)}"
                     android:scaleType="fitCenter"
                     app:layout_constraintEnd_toStartOf="@+id/guideline_33_v"
                     app:layout_constraintStart_toStartOf="parent"
@@ -686,7 +817,7 @@
                     android:layout_width="@dimen/_80sdp"
                     android:layout_height="@dimen/_80sdp"
                     android:contentDescription="@string/app_name"
-                    android:imageUrl="@{pokemon.getUrlImage(pokemon.second_num_pokemon)}"
+                    android:imageUrl="@{pokemon.getThumbnail(pokemon.second_num_pokemon)}"
                     android:scaleType="fitCenter"
                     app:layout_constraintEnd_toStartOf="@+id/guideline_66_v"
                     app:layout_constraintStart_toStartOf="@+id/guideline_33_v"
@@ -741,7 +872,7 @@
                     android:layout_width="@dimen/_80sdp"
                     android:layout_height="@dimen/_80sdp"
                     android:contentDescription="@string/app_name"
-                    android:imageUrl="@{pokemon.getUrlImage(pokemon.third_num_pokemon)}"
+                    android:imageUrl="@{pokemon.getThumbnail(pokemon.third_num_pokemon)}"
                     android:scaleType="fitCenter"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/guideline_66_v"
