--- a/app/src/main/res/layout/item_list_pokemon.xml
+++ b/app/src/main/res/layout/item_list_pokemon.xml
@@ -14,7 +14,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_170sdp"
+        android:layout_height="@dimen/_180sdp"
         android:layout_margin="@dimen/_5sdp"
         android:background="@android:color/transparent">
 
@@ -46,7 +46,7 @@
             android:layout_height="@dimen/_100sdp"
             android:contentDescription="@string/app_name"
             android:elevation="3dp"
-            android:imageUrl="@{pokemon.image}"
+            android:imageUrl="@{pokemon.thumbnail}"
             android:scaleType="fitCenter"
             app:layout_constraintBottom_toTopOf="@+id/guideline_50_h"
             app:layout_constraintEnd_toEndOf="parent"
@@ -74,7 +74,8 @@
             android:layout_height="wrap_content"
             android:elevation="2dp"
             android:gravity="center"
-            android:lines="1"
+            android:maxLines="2"
+            android:lines="2"
             android:text="@{pokemon.name}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -105,7 +106,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/guideline8"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imagePokemon"
-                app:src="@{pokemon.imgFirstType}"
+                app:src="@{pokemon.getType(pokemon.type_first)}"
                 tools:src="@drawable/ic_grass" />
 
             <ImageView
@@ -117,40 +118,10 @@
                 android:contentDescription="@string/app_name"
                 android:scaleType="centerCrop"
                 android:visibility="@{pokemon.type_second !=null  ? View.VISIBLE : View.GONE, default= visible }"
-                app:src="@{pokemon.imgSecondType}"
+                app:src="@{pokemon.getType(pokemon.type_second)}"
                 tools:src="@drawable/ic_poison" />
 
         </LinearLayout>
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="@dimen/_20sdp"
-            android:layout_height="@dimen/_20sdp"
-            android:contentDescription="@string/app_name"
-            android:elevation="3dp"
-            android:scaleType="fitCenter"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/guideline_50_v"
-            app:layout_constraintStart_toStartOf="@+id/cardView"
-            app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name"
-            app:src="@{pokemon.imgFirstType}"
-            tools:src="@drawable/ic_grass_2" />
-
-        <ImageView
-            android:layout_width="@dimen/_20sdp"
-            android:layout_height="@dimen/_20sdp"
-            android:contentDescription="@string/app_name"
-            android:elevation="3dp"
-            android:scaleType="fitCenter"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/guideline_50_v"
-            app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name"
-            app:src="@{pokemon.imgSecondType}"
-            tools:src="@drawable/ic_poison_2" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
