--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="text_hint">#881E2746</color>
     <color name="transparent">@android:color/transparent</color>
     <color name="gray_general">@android:color/darker_gray</color>
-    <color name="black_transparent">#C1000000</color>
+    <color name="black_transparent">#B5000000</color>
+    <color name="purple_700_transparent">#B5141A31</color>
 
 </resources>
